# Marg-Li-CoT

./: .gitmodules  README.md  STATE_STEP_2.md  STATE_STEP_3.md  bin_refine.py  bin_train.py  data_synthetic_arithmetic_tokenizer.py  data_tokenizer.py  general_shared_constants.py  general_utils.py  group_beam_search.ipynb  group_bs.py  local_wandb_run_ddp.sh  marginal.py  mypy.ini  nb_group_beam_search.ipynb  ppo.py  pretrain.py  run_ddp.sh  scratchpads_generation.ipynb  script_data_to_h5.py  script_wandb_clean_short_runs.py  setup.py  train_utils.py
approach_sft/: README.md  aliases.sh  bin_sft.py  launch.py  lib_sft_collators.py  lib_sft_commonsense_qa.py  lib_sft_constants.py  lib_sft_dataloaders.py  lib_sft_multi_regexes.py  lib_sft_tables.py  logs_not_running.sh  math_sft.py  pre_generate_fsms.py  pyproject.toml  queue_all_jobs.sh  setup.py
approach_sft/config/: config.yaml
approach_sft/config/experiment/: answer_only_arithmetic.yaml  answer_only_gsm8k.yaml  answer_only_gsm8k_gemma_2_2b_it.yaml  ao_arithmetic_smollm2_1.7B.yaml  ao_arithmetic_smollm2_1.7B_no_peft.yaml  ao_gsm8k_smollm2_1.7B.yaml  ao_gsm8k_smollm2_1.7B_no_peft.yaml  ao_math_smollm2_1.7B.yaml  ao_math_smollm2_1.7B_no_peft.yaml  cot_arithmetic.yaml  cot_arithmetic_smollm2_1.7B.yaml  cot_arithmetic_smollm2_1.7B_no_peft.yaml  cot_gsm8k.yaml  cot_gsm8k_gemma_2_2b.yaml  cot_gsm8k_smollm2_1.7B.yaml  cot_gsm8k_smollm2_1.7B_0_000025_30.yaml  cot_gsm8k_smollm2_1.7B_0_00005_5.yaml  cot_gsm8k_smollm2_1.7B_no_peft.yaml  cot_math_smollm2_1.7B.yaml  cot_math_smollm2_1.7B_0_00005_15.yaml  cot_math_smollm2_1.7B_0_00005_5.yaml  cot_math_smollm2_1.7B_0_0001_15.yaml  cot_math_smollm2_1.7B_0_0005_15.yaml  cot_math_smollm2_1.7B_0_0005_5.yaml  (+5 more)
job_sets/: _common.py  _constants.py  _launch.py  _ui.py  _wandb_utils.py  check_status.py  launch_set.py  launch_set_dont_sbatch.py  main.py  pyproject.toml
job_sets/config_sets/: qwen.yaml  smollm.yaml  smollm_five_shot_eval.yaml  smollm_sft.yaml  smollm_sft_no_peft.yaml  smollm_trl.yaml
job_sets/notebooks/: fix.ipynb
job_sets/wandb/: latest-run
light_eval_tests/: compare_checkpoint.ipynb  eval_plot.ipynb  extract_lengths_gens.ipynb  few_shot_launch_slurm_gsm8k.sh  few_shot_launch_slurm_math.sh  fix_no_tokenizer_rejection_sampling.ipynb  fix_tokenizer_sft.ipynb  launch_slurm_gsm8k.sh  launch_slurm_math.sh  launch_slurm_task_gsm8k_train_gsm8k_math.sh  launch_slurm_task_math_train_gsm8k_math.sh  multi_gpu_lighteval_chain.py  pt_to_json.ipynb  pyproject.toml  read_results_parquet.ipynb  rejection_sampling_launch_slurm_gsm8k.sh  rejection_sampling_launch_slurm_math.sh  sft_launch_slurm_gsm8k.sh  sft_launch_slurm_math.sh  zero_shot_launch_slurm_gsm8k.sh  zero_shot_launch_slurm_math.sh
light_eval_tests/sft_math_analysis/: plotting.ipynb  plotting_gsm8k_sft.ipynb  plotting_math_sft.ipynb  plotting_rs_gsm8k_train_5_shot_inference_0_shot.ipynb  rejection_sampling.ipynb  verify.py
light_eval_tests/util_code/: tasks.py
metrics_debug_lighteval/: README.md  pyproject.toml  zero_shot_launch_slurm_gsm8k.sh
modern_rejection_sampling/: accelerate.yaml  config.py  launch_do_call_sbatch.sh  main.py  open_instruct  pyproject.toml  ray_train.py  test_launch_do_call_sbatch.sh  train.py  trainer.py
modern_rejection_sampling/archive/: process_based_test.py  ray_actor_test.py  train.py  train_simple.py
modern_rejection_sampling/config/: config.yaml
modern_rejection_sampling/scratch/: clean_checkpoints.ipynb
(+816 files in other folders)
