[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true



[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]


[project]
name = "approach_sft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python ="<=3.12,>=3.10"
dependencies = [
    "fire>=0.7.0",
    "hydra-core>=1.3.2",
    "inquirer>=3.4.0",
    "more-itertools>=10.6.0",
    "pynvml>=12.0.0",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "edit-distance>=1.0.6",
    "transformers>=4.51.0",
    "datasets>=3.5.0",
    "peft>=0.15.1",
    "jsonlines>=4.0.0",
    "beartype>=0.20.2",
    "multiset>=3.2.0",
    "text2digits>=0.1.0",
    "bitsandbytes>=0.45.4",
    "outlines>=0.2.3",
]


