[project]
name = "job-sets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.1.1",
    "fire>=0.7.0",
    "hydra-core>=1.3.2",
    "inquirer>=3.4.0",
    "jsonlines>=4.0.0",
    "more-itertools>=10.6.0",
    "rich>=14.0.0",
    "simple-slurm>=0.3.5",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]
