[project]
name = "modern-rejection-sampling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "vllm==0.6.4",
    "accelerate>=1.5.2",
    "fire>=0.7.0",
    "rich>=13.9.4",
    "hydra-core>=1.3.2",
    "more-itertools>=10.6.0",
    "ray>=2.44.1",
    "setuptools>=78.1.0",
    "wandb>=0.19.8",
    "datasets>=3",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
